2013-09-25 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/modificar_agente.php: fixed the check remote
	config.

2013-09-20 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

        * godmode/alerts/configure_alert_action.php: Fix update
        process of alert actions when group is not ALL.

	Merged from trunk.

2013-09-16  Vanessa Gil <vanessa.gil@artica.es>

	* include/languages/ar.mo
	  include/languages/ar.po
	  include/languages/ast.mo
	  include/languages/ast.po
	  include/languages/bn.mo
	  include/languages/bn.po
	  include/languages/bg.mo
	  include/languages/bg.po
	  include/languages/ca.mo
	  include/languages/ca.po
 	  include/languages/cs.mo
	  include/languages/cs.po
	  include/languages/da.mo
	  include/languages/da.po
	  include/languages/de.mo
	  include/languages/de.po
	  include/languages/el.mo
	  include/languages/el.po
	  include/languages/en.mo
	  include/languages/en.po
	  include/languages/en_AU.mo
	  include/languages/en_AU.po
	  include/languages/en_GB.mo
	  include/languages/en_GB.po
	  include/languages/es.mo
	  include/languages/es.po
	  include/languages/et.mo
	  include/languages/et.po
	  include/languages/eu.mo
	  include/languages/eu.po
	  include/languages/fi.po
	  include/languages/fi.mo
	  include/languages/fr.po
	  include/languages/fr.mo
	  include/languages/gl.po
	  include/languages/gl.mo
	  include/languages/he.po
	  include/languages/he.mo
	  include/languages/hi.po
	  include/languages/hi.mo
	  include/languages/hu.po
	  include/languages/hu.mo
	  include/languages/it.po
	  include/languages/it.mo
	  include/languages/ja.po
	  include/languages/ja.mo
	  include/languages/ko.po
	  include/languages/ko.mo
	  include/languages/mr.po
	  include/languages/mr.mo
	  include/languages/ms.po
	  include/languages/ms.mo
	  include/languages/nb.po
	  include/languages/nb.mo
	  include/languages/nl.po
	  include/languages/nl.mo
	  include/languages/pl.po
	  include/languages/pl.mo
	  include/languages/pt.po